kagent/test-client/rsa-kagent-jwt-AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
spec:
  selector:
    matchLabels:
      app: kagent
  action: ALLOW
  rules:
  - from:
    - source:
       requestPrincipals: ["*"]
